all layouting done

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -240,7 +240,7 @@
                             android:layout_height="wrap_content"
                             android:background="@color/white"
                             android:padding="16dp"
-                            android:text="On-going Management"
+                            android:text="@string/title_on_going_management"
                             android:textColor="@color/text_default"
                             android:textSize="@dimen/text_default"
                             android:textStyle="bold"
@@ -272,7 +272,7 @@
                             android:layout_height="wrap_content"
                             android:background="@color/white"
                             android:padding="16dp"
-                            android:text="My Absent"
+                            android:text="@string/title_my_absent"
                             android:textColor="@color/text_default"
                             android:textSize="@dimen/text_default"
                             android:textStyle="bold"
@@ -338,7 +338,7 @@
                         android:layout_height="wrap_content"
                         android:background="@color/white"
                         android:padding="16dp"
-                        android:text="Today's Updates"
+                        android:text="@string/title_today_s_updates"
                         android:textColor="@color/text_default"
                         android:textSize="@dimen/text_default"
                         android:textStyle="bold"
