--- a/app/src/main/res/layout/dialog_manager_chooser.xml
+++ b/app/src/main/res/layout/dialog_manager_chooser.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -8,7 +9,7 @@
             type="String" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_12_white_top"
@@ -54,7 +55,8 @@
                     android:layout_gravity="center"
                     android:adjustViewBounds="true"
                     android:src="@drawable/ic_baseline_find_in_page_56"
-                    app:tint="@color/brand_50" />
+                    app:tint="@color/brand_50"
+                    android:contentDescription="@string/cd_image_no_data" />
 
                 <TextView
                     android:layout_width="wrap_content"
