--- a/app/src/main/res/layout/fragment_task_pov.xml
+++ b/app/src/main/res/layout/fragment_task_pov.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="user"
-            type="com.projectd.data.model.Task.User" />
+            type="com.projectd.data.model.User" />
 
         <variable
             name="division"
