--- a/app/src/main/res/layout/item_task_chooser.xml
+++ b/app/src/main/res/layout/item_task_chooser.xml
@@ -25,7 +25,7 @@
             android:ellipsize="end"
             android:maxLines="3"
             android:minLines="3"
-            android:text='@{data.description}'
+            android:text='@{data.taskName}'
             android:textColor="@color/text_bg_green"
             android:textSize="@dimen/text_default"
             android:textStyle="bold"
@@ -63,7 +63,7 @@
                     android:background="@drawable/bg_project_green"
                     android:paddingHorizontal="6dp"
                     android:paddingVertical="3dp"
-                    android:text="@{data.project.name}"
+                    android:text="@{data.project}"
                     android:textColor="@color/text_bg_green"
                     android:textSize="@dimen/text_smallest"
                     tools:text="Aseanindo" />
@@ -77,7 +77,7 @@
                     android:paddingVertical="3dp"
                     android:textColor="@color/text_bg_green"
                     android:textSize="@dimen/text_smallest"
-                    app:taskLevel='@{data.level}'
+                    app:taskLevel='@{data.load}'
                     tools:text="Low" />
 
             </LinearLayout>
