--- a/app/src/main/res/layout/item_update.xml
+++ b/app/src/main/res/layout/item_update.xml
@@ -8,6 +8,9 @@
         <variable
             name="data"
             type="com.projectd.data.model.Task" />
+        <variable
+            name="yourName"
+            type="String" />
         <import type="android.view.View" />
     </data>
 
@@ -21,7 +24,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@drawable/bg_circle_placeholder"
-            app:imgCircleUrl='@{data.engineer.photo}'
+            app:imgCircleUrl='@{data.photo}'
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="AB"
@@ -39,7 +42,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text='@{data.createdBy.equals("You") ? data.createdBy : data.engineer.shortName }'
+                android:text='@{data.createdBy.equals(yourName) ? "You" : data.createdBy }'
                 android:textColor="@color/text_default"
                 android:textSize="@dimen/text_small"
                 android:textStyle="bold"
@@ -85,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="12dp"
                     android:layout_weight="1"
-                    android:text='@{data.description}'
+                    android:text='@{data.taskName}'
                     android:textColor="@color/brand_50"
                     android:textSize="@dimen/text_default"
                     tools:text="This is task description" />
@@ -108,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:text="@{data.project.name}"
+                android:text="@{data.project}"
                 android:textColor="@color/brand_50"
                 android:textSize="@dimen/text_small"
                 android:textStyle="bold"
@@ -122,10 +125,10 @@
                 android:layout_marginTop="4dp"
                 android:drawablePadding="3dp"
                 android:gravity="center_vertical"
-                android:text='@{"Verified by " + data.verified().shortName()}'
+                android:text='@{"Verified by " + data.verifiedBy}'
                 android:textColor="@color/brand_50"
                 android:textSize="@dimen/text_smallest"
-                android:visibility="@{data.verified() == null ? View.GONE : View.VISIBLE}"
+                android:visibility='@{data.verified.equals("0") ? View.GONE : View.VISIBLE}'
                 app:drawableStartCompat="@drawable/ic_baseline_verified_24"
                 app:drawableTint="@color/text_bg_green"
                 tools:text="Verified by Aliando" />
@@ -136,7 +139,7 @@
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginVertical="8dp"
                 android:background="@color/brand_25"
-                android:visibility="@{data.notes == null ? View.GONE : View.VISIBLE}" />
+                android:visibility="@{data.description == null ? View.GONE : View.VISIBLE}" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -144,10 +147,10 @@
                 android:layout_marginHorizontal="12dp"
                 android:alpha="0.75"
                 android:drawablePadding="3dp"
-                android:text='@{"Note: " + data.notes}'
+                android:text='@{"Note: " + data.description}'
                 android:textColor="@color/brand_50"
                 android:textSize="@dimen/text_smallest"
-                android:visibility="@{data.notes == null ? View.GONE : View.VISIBLE}"
+                android:visibility="@{data.description == null ? View.GONE : View.VISIBLE}"
                 tools:text="Note: This is note" />
 
             <LinearLayout
@@ -176,24 +179,10 @@
                     android:paddingVertical="3dp"
                     android:textColor="@color/brand_50"
                     android:textSize="@dimen/text_smallest"
-                    app:taskLevel='@{data.level}'
+                    app:taskLevel='@{data.load}'
                     tools:text="Low" />
 
             </LinearLayout>
-
-            <!--<HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                android:paddingHorizontal="12dp"
-                android:scrollIndicators="none"
-                android:scrollbars="none">
-
-
-
-            </HorizontalScrollView>-->
 
         </LinearLayout>
 
