--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -29,6 +29,7 @@
                 android:layout_weight="1" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_add_project"
                 style="@style/Theme.ProjectD.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
