--- a/app/src/main/res/layout/item_manager.xml
+++ b/app/src/main/res/layout/item_manager.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="data"
-            type="com.projectd.data.model.User" />
+            type="com.projectd.data.model.Manager" />
     </data>
 
     <LinearLayout
