--- a/app/src/main/res/layout/item_project_chooser.xml
+++ b/app/src/main/res/layout/item_project_chooser.xml
@@ -6,15 +6,6 @@
         <variable
             name="data"
             type="com.projectd.data.model.Project" />
-
-        <variable
-            name="role"
-            type="String" />
-
-        <variable
-            name="division"
-            type="String" />
-
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -34,7 +25,7 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:minLines="2"
-            android:text='@{data.name}'
+            android:text='@{data.projectName}'
             android:textColor="@color/text_bg_yellow"
             android:textSize="@dimen/text_default"
             android:textStyle="bold"
@@ -58,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="12dp"
-            android:text='@{"Progress: " + data.progress(role, division) + "%"}'
+            android:text="Progress 80%"
             android:textColor="@color/text_bg_yellow"
             android:textSize="@dimen/text_small"
             android:textStyle="bold"
@@ -69,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:progress='@{data.progress(role, division)}' />
+            android:progress="80" />
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -91,7 +82,7 @@
                     android:background="@drawable/bg_project_yellow"
                     android:paddingHorizontal="6dp"
                     android:paddingVertical="3dp"
-                    android:text='@{data.pd.firstName()}'
+                    android:text='@{data.projectDirector}'
                     android:textColor="@color/text_bg_yellow"
                     android:textSize="@dimen/text_smallest"
                     tools:text="Riki" />
@@ -105,7 +96,7 @@
                     android:paddingVertical="3dp"
                     android:textColor="@color/text_bg_yellow"
                     android:textSize="@dimen/text_smallest"
-                    app:projectLevel='@{data.level}'
+                    app:projectLevel='@{data.difficulty}'
                     tools:text="Low" />
 
             </LinearLayout>
