add loading, fix fc, add emptyList in viewMOdel

--- a/app/src/main/res/layout/dialog_manager_chooser.xml
+++ b/app/src/main/res/layout/dialog_manager_chooser.xml
@@ -40,6 +40,12 @@
                 tools:itemCount="3"
                 tools:listitem="@layout/item_manager" />
 
+            <ProgressBar
+                android:id="@+id/progress_rv_manager"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+
             <LinearLayout
                 android:id="@+id/v_empty"
                 android:layout_width="wrap_content"
