--- a/app/src/main/res/layout/dialog_project_chooser.xml
+++ b/app/src/main/res/layout/dialog_project_chooser.xml
@@ -60,6 +60,12 @@
                 tools:itemCount="3"
                 tools:listitem="@layout/item_project_chooser" />
 
+            <ProgressBar
+                android:id="@+id/progress_rv_project"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+
             <LinearLayout
                 android:id="@+id/v_empty"
                 android:layout_width="wrap_content"
