--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -57,6 +57,12 @@
                 tools:itemCount="3"
                 tools:listitem="@layout/item_project"/>
 
+            <ProgressBar
+                android:id="@+id/progress_rv_project"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+
             <LinearLayout
                 android:id="@+id/v_empty"
                 android:layout_width="wrap_content"
