--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -289,7 +289,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="12dp"
-                                android:text='@{absent.description}'
+                                android:text='@{absent.reason}'
                                 android:textColor="@color/text_bg_red"
                                 android:textSize="@dimen/text_default"
                                 android:textStyle="bold"
