--- a/app/src/main/res/layout/dialog_absent.xml
+++ b/app/src/main/res/layout/dialog_absent.xml
@@ -43,6 +43,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/btn_submit"
             style="@style/Theme.ProjectD.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
