--- a/app/src/main/res/layout/item_absent.xml
+++ b/app/src/main/res/layout/item_absent.xml
@@ -16,116 +16,115 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/iv_avatar"-->
-<!--            android:layout_width="32dp"-->
-<!--            android:layout_height="32dp"-->
-<!--            android:background="@drawable/bg_circle_placeholder"-->
-<!--            app:imgCircleUrl='@{data.engineer.photo}'-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            tools:text="AB"-->
-<!--            android:contentDescription="@string/cd_avatar_user" />-->
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/bg_circle_placeholder"
+            app:imgCircleUrl='@{data.photo}'
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="AB"
+            android:contentDescription="@string/cd_avatar_user" />
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toEndOf="@id/iv_avatar"-->
-<!--            app:layout_constraintTop_toTopOf="@id/iv_avatar">-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_avatar"
+            app:layout_constraintTop_toTopOf="@id/iv_avatar">
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text='@{data.engineer.shortName()}'-->
-<!--                android:textColor="@color/text_default"-->
-<!--                android:textSize="@dimen/text_small"-->
-<!--                android:textStyle="bold"-->
-<!--                tools:text="Aliando" />-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='@{data.name}'
+                android:textColor="@color/text_default"
+                android:textSize="@dimen/text_small"
+                android:textStyle="bold"
+                tools:text="Aliando" />
 
-<!--            <TextView-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="3dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="@string/label_submitted_absent"-->
-<!--                android:textColor="@color/text_default"-->
-<!--                android:textSize="@dimen/text_small" />-->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_weight="1"
+                android:text="@string/label_submitted_absent"
+                android:textColor="@color/text_default"
+                android:textSize="@dimen/text_small" />
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textColor="@color/text_gray"-->
-<!--                android:textSize="@dimen/text_smallest"-->
-<!--                app:timeTo='@{data.updatedAt == null ? data.createdAt : data.updatedAt}'-->
-<!--                tools:text="08:08" />-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/text_smallest"
+                app:timeTo='@{data.date}'
+                tools:text="08:08" />
 
-<!--        </LinearLayout>-->
+        </LinearLayout>
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:background="@drawable/bg_round_12_red"-->
-<!--            android:orientation="vertical"-->
-<!--            android:paddingVertical="12dp"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toEndOf="@id/iv_avatar"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/iv_avatar">-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/bg_round_12_red"
+            android:orientation="vertical"
+            android:paddingVertical="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_avatar"
+            app:layout_constraintTop_toBottomOf="@id/iv_avatar">
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-<!--                <TextView-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginHorizontal="12dp"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:text='@{data.description}'-->
-<!--                    android:textColor="@color/text_bg_red"-->
-<!--                    android:textSize="@dimen/text_default"-->
-<!--                    android:textStyle="bold"-->
-<!--                    tools:text="This is task description" />-->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_weight="1"
+                    android:text='@{data.reason}'
+                    android:textColor="@color/text_bg_red"
+                    android:textSize="@dimen/text_default"
+                    android:textStyle="bold"
+                    tools:text="This is task description" />
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/btn_more"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginEnd="8dp"-->
-<!--                    android:background="?selectableItemBackgroundBorderless"-->
-<!--                    android:src="@drawable/ic_baseline_more_vert_24"-->
-<!--                    android:visibility="gone"-->
-<!--                    app:tint="@color/text_bg_red"-->
-<!--                    tools:visibility="visible"-->
-<!--                    android:contentDescription="@string/cd_button_more" />-->
+                <ImageView
+                    android:id="@+id/btn_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:background="?selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_baseline_more_vert_24"
+                    app:tint="@color/text_bg_red"
+                    tools:visibility="visible"
+                    android:contentDescription="@string/cd_button_more" />
 
-<!--            </LinearLayout>-->
+            </LinearLayout>
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginHorizontal="12dp"-->
-<!--                android:text='@{data.prettyDate}'-->
-<!--                android:textColor="@color/text_bg_red"-->
-<!--                android:textSize="@dimen/text_small"-->
-<!--                tools:text="12 Desember 2022" />-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:text='@{data.prettyDate}'
+                android:textColor="@color/text_bg_red"
+                android:textSize="@dimen/text_small"
+                tools:text="12 Desember 2022" />
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginHorizontal="12dp"-->
-<!--                android:layout_marginTop="4dp"-->
-<!--                android:gravity="center_vertical"-->
-<!--                app:absentApproval='@{data}'-->
-<!--                android:textColor="@color/text_bg_red"-->
-<!--                android:textSize="@dimen/text_smallest"-->
-<!--                tools:text="Approved by Aliando" />-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center_vertical"
+                app:absentApproval='@{data}'
+                android:textColor="@color/text_bg_red"
+                android:textSize="@dimen/text_smallest"
+                tools:text="Approved by Aliando" />
 
-<!--        </LinearLayout>-->
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
