--- a/app/src/main/res/layout/fragment_today_absent.xml
+++ b/app/src/main/res/layout/fragment_today_absent.xml
@@ -8,57 +8,64 @@
         android:orientation="vertical"
         tools:context=".ui.today.TodayAbsentFragment">
 
-        <FrameLayout
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:paddingVertical="12dp"
-                android:id="@+id/rv_update"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingHorizontal="12dp"
-                android:clipToPadding="false"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:spanCount="2"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_absent" />
+                android:layout_height="match_parent">
 
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:paddingVertical="12dp"
+                    android:id="@+id/rv_update"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="12dp"
+                    android:clipToPadding="false"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:spanCount="2"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_absent" />
 
-            <LinearLayout
-                android:id="@+id/v_empty"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:visibility="gone"
-                tools:visibility="visible">
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
 
-                <ImageView
+                <LinearLayout
+                    android:id="@+id/v_empty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/ic_baseline_find_in_page_56"
-                    app:tint="@color/brand_50"
-                    android:contentDescription="@string/cd_image_no_data" />
+                    android:gravity="center"
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_no_data_found"
-                    android:textColor="@color/brand_50"
-                    android:textSize="@dimen/text_default" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_baseline_find_in_page_56"
+                        app:tint="@color/brand_50"
+                        android:contentDescription="@string/cd_image_no_data" />
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/label_no_data_found"
+                        android:textColor="@color/brand_50"
+                        android:textSize="@dimen/text_default" />
 
-        </FrameLayout>
+                </LinearLayout>
+
+            </FrameLayout>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
 
