--- a/app/src/main/res/layout/item_update.xml
+++ b/app/src/main/res/layout/item_update.xml
@@ -115,7 +115,7 @@
                 android:textColor="@color/brand_50"
                 android:textSize="@dimen/text_small"
                 android:textStyle="bold"
-                android:visibility="@{data.project == null ? View.GONE : View.VISIBLE}"
+                android:visibility='@{data.project.contains("null") ? View.GONE : View.VISIBLE}'
                 tools:text="Project Name" />
 
             <TextView
